[projeto 0x19/pessoa_por_cargo] Implementacao 2